# wakeonlan-rust

./: Cargo.toml  flake.nix
.github/workflows/: audit.yml  cd.yml  ci.yml
src/: main.rs
