[package]
name = "wakeonlan"
version = "0.1.0"
authors = ["Jeffery Utter <jeff@jeffutter.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "~0.4"

[dependencies.clap]
version = "~2.33"
default-features = false
features = [ "suggestions", "color" ]

[profile.release]
opt-level = 3
debug = false
lto = true
