[package]
name = "wakeonlan"
version = "0.1.0"
authors = ["Jeffery Utter <jeff@jeffutter.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "~0.4"
anyhow = "1"
clap = { version = "4", default-features = false, features = ["std", "suggestions", "color"] }

[profile.release]
opt-level = 3
debug = false
lto = true
